@@ -5,33 +5,30 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
-import org.mockito.ArgumentCaptor;
-import org.mockito.Captor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.Spy;
 import org.mockito.junit.MockitoJUnitRunner;
 import uk.gov.hmcts.reform.ccd.client.model.CaseDetails;
+import uk.gov.hmcts.reform.finrem.caseorchestration.error.NoSuchUserException;
 import uk.gov.hmcts.reform.finrem.caseorchestration.helper.BarristerUpdateDifferenceCalculator;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.BarristerChange;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.Barrister;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.BarristerData;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CaseAssignedUserRole;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CaseAssignedUserRolesResource;
-import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.ChangeOfRepresentationRequest;
-import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.ChangedRepresentative;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.Element;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.Organisation;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.RepresentationUpdate;
-import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.RepresentationUpdateHistory;
 import uk.gov.hmcts.reform.finrem.caseorchestration.service.AssignCaseAccessService;
 import uk.gov.hmcts.reform.finrem.caseorchestration.service.CaseAssignedRoleService;
 import uk.gov.hmcts.reform.finrem.caseorchestration.service.CaseDataService;
-import uk.gov.hmcts.reform.finrem.caseorchestration.service.ChangeOfRepresentationService;
 import uk.gov.hmcts.reform.finrem.caseorchestration.service.IdamService;
 import uk.gov.hmcts.reform.finrem.caseorchestration.service.NotificationService;
 import uk.gov.hmcts.reform.finrem.caseorchestration.service.PrdOrganisationService;
+import uk.gov.hmcts.reform.finrem.caseorchestration.service.SystemUserService;
 
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -52,34 +49,33 @@ import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigCo
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.APPLICANT_BARRISTER_COLLECTION;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.APPLICANT_BARRISTER_ROLE;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.APP_SOLICITOR_POLICY;
+import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.CASEWORKER_ROLE;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.CASE_ROLE;
+import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.MANAGE_BARRISTER_PARTY;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.REPRESENTATION_UPDATE_HISTORY;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.RESPONDENT_BARRISTER_COLLECTION;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.RESP_SOLICITOR_POLICY;
-import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.Element.element;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.service.CcdServiceTest.AUTH_TOKEN;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.service.barristers.ManageBarristerService.MANAGE_BARRISTERS;
-import static uk.gov.hmcts.reform.finrem.caseorchestration.service.barristers.ManageBarristerService.MANAGE_BARRISTER_PARTY;
 
 @RunWith(MockitoJUnitRunner.class)
 public class ManageBarristerServiceTest {
 
     private static final long CASE_ID = 1583841721773828L;
-    private static final String CASEWORKER_ROLE = "[CASEWORKER]";
     private static final String APP_BARRISTER_EMAIL_ONE = "applicantbarristerone@gmail.com";
     private static final String APP_BARRISTER_EMAIL_TWO = "applicantbarristertwo@gmail.com";
     private static final String BARRISTER_USER_ID = "barristerUserId";
     private static final String APP_SOLICITOR = "App Solicitor";
+    private static final String CASEWORKER_NAME = "The Caseworker";
+    private static final String SYS_USER_TOKEN = "sysUserToken";
+    private static final String CLIENT_NAME = "Client Name";
+    private static final String SOME_ORG_ID = "someOrgId";
     private static final Barrister DEFAULT_BARRISTER = Barrister.builder()
         .email("someEmail")
         .build();
-    private static final String CLIENT_NAME = "Client Name";
-    private static final String SOME_ORG_ID = "someOrgId";
 
     @Mock
     private BarristerUpdateDifferenceCalculator barristerUpdateDifferenceCalculator;
-    @Mock
-    private ChangeOfRepresentationService changeOfRepresentationService;
     @Mock
     private AssignCaseAccessService assignCaseAccessService;
     @Mock
@@ -92,14 +88,13 @@ public class ManageBarristerServiceTest {
     private CaseAssignedRoleService caseAssignedRoleService;
     @Mock
     private NotificationService notificationService;
+    @Mock
+    private SystemUserService systemUserService;
     @Spy
     private ObjectMapper objectMapper = new ObjectMapper();
 
     @InjectMocks
     ManageBarristerService manageBarristerService;
-
-    @Captor
-    ArgumentCaptor<ChangeOfRepresentationRequest> changeOfRepresentationRequestCaptor;
 
     private CaseDetails caseDetails;
 
@@ -170,14 +165,12 @@ public class ManageBarristerServiceTest {
         when(organisationService.findUserByEmail(APP_BARRISTER_EMAIL_ONE, AUTH_TOKEN)).thenReturn(Optional.of(BARRISTER_USER_ID));
         when(idamService.getIdamFullName(AUTH_TOKEN)).thenReturn(APP_SOLICITOR);
         when(caseDataService.buildFullApplicantName(any())).thenReturn(CLIENT_NAME);
-        when(changeOfRepresentationService.generateRepresentationUpdateHistory(any()))
-            .thenReturn(buildRepresentationUpdateHistory());
-        when(caseAssignedRoleService.getCaseAssignedUserRole(caseDetails, AUTH_TOKEN)).thenReturn(
-            buildCaseAssignedUserRolesResource(APP_SOLICITOR_POLICY));
+        when(caseAssignedRoleService.getCaseAssignedUserRole(caseDetails, AUTH_TOKEN))
+            .thenReturn(buildCaseAssignedUserRolesResource(APP_SOLICITOR_POLICY));
 
         Map<String, Object> caseData = manageBarristerService.updateBarristerAccess(caseDetails,
             List.of(DEFAULT_BARRISTER),
-            List.of(DEFAULT_BARRISTER), AUTH_TOKEN);
+            Collections.emptyList(), AUTH_TOKEN);
 
         List<Element<RepresentationUpdate>> representationUpdateHistory =
             objectMapper.convertValue(caseData.get(REPRESENTATION_UPDATE_HISTORY), new TypeReference<>() {});
@@ -185,18 +178,41 @@ public class ManageBarristerServiceTest {
         assertThat(update.getBy(), is(APP_SOLICITOR));
         assertThat(update.getAdded().getEmail(), is(APP_BARRISTER_EMAIL_ONE));
         assertThat(update.getParty(), is(APPLICANT));
+        assertThat(update.getVia(), is(MANAGE_BARRISTERS));
+        assertThat(update.getClientName(), is(CLIENT_NAME));
 
         verify(assignCaseAccessService).grantCaseRoleToUser(caseDetails.getId(), BARRISTER_USER_ID,
             APPLICANT_BARRISTER_ROLE, SOME_ORG_ID);
-        verify(changeOfRepresentationService).generateRepresentationUpdateHistory(changeOfRepresentationRequestCaptor.capture());
+    }
 
-        ChangeOfRepresentationRequest representationRequest = changeOfRepresentationRequestCaptor.getValue();
+    @Test
+    public void givenValidData_whenUpdateBarristerAccessAsCaseworker_thenGrantAccessAndGenerateRepresentationUpdateData() {
+        caseDetails.getData().put(CASE_ROLE, CASEWORKER_ROLE);
+        caseDetails.getData().put(MANAGE_BARRISTER_PARTY, APPLICANT);
+        when(barristerUpdateDifferenceCalculator.calculate(any(), any())).thenReturn(buildAddedBarristerChange());
+        when(organisationService.findUserByEmail(APP_BARRISTER_EMAIL_ONE, SYS_USER_TOKEN)).thenReturn(Optional.of(BARRISTER_USER_ID));
+        when(idamService.getIdamFullName(AUTH_TOKEN)).thenReturn(CASEWORKER_NAME);
+        when(caseDataService.buildFullApplicantName(any())).thenReturn(CLIENT_NAME);
+        when(systemUserService.getSysUserToken()).thenReturn(SYS_USER_TOKEN);
+        when(caseAssignedRoleService.getCaseAssignedUserRole(caseDetails, AUTH_TOKEN))
+            .thenReturn(buildCaseAssignedUserRolesResource(APP_SOLICITOR_POLICY));
 
-        assertChangeOfRepresentationRequest(representationRequest,
-            APP_BARRISTER_EMAIL_ONE,
-            APP_SOLICITOR,
-            APPLICANT,
-            CLIENT_NAME);
+        Map<String, Object> caseData = manageBarristerService.updateBarristerAccess(caseDetails,
+            List.of(DEFAULT_BARRISTER),
+            Collections.emptyList(), AUTH_TOKEN);
+
+        List<Element<RepresentationUpdate>> representationUpdateHistory =
+            objectMapper.convertValue(caseData.get(REPRESENTATION_UPDATE_HISTORY), new TypeReference<>() {});
+        RepresentationUpdate update = representationUpdateHistory.get(0).getValue();
+        assertThat(update.getBy(), is(CASEWORKER_NAME));
+        assertThat(update.getAdded().getEmail(), is(APP_BARRISTER_EMAIL_ONE));
+        assertThat(update.getParty(), is(APPLICANT));
+        assertThat(update.getVia(), is(MANAGE_BARRISTERS));
+        assertThat(update.getClientName(), is(CLIENT_NAME));
+
+        verify(assignCaseAccessService).grantCaseRoleToUser(caseDetails.getId(), BARRISTER_USER_ID,
+            APPLICANT_BARRISTER_ROLE, SOME_ORG_ID);
+        verify(organisationService).findUserByEmail(APP_BARRISTER_EMAIL_ONE, SYS_USER_TOKEN);
     }
 
     @Test
@@ -207,10 +223,10 @@ public class ManageBarristerServiceTest {
             buildCaseAssignedUserRolesResource(APP_SOLICITOR_POLICY));
         when(organisationService.findUserByEmail(APP_BARRISTER_EMAIL_ONE, AUTH_TOKEN)).thenReturn(Optional.empty());
 
-        Exception exception = assertThrows(IllegalArgumentException.class, () ->
+        Exception exception = assertThrows(NoSuchUserException.class, () ->
             manageBarristerService.updateBarristerAccess(caseDetails,
                 List.of(DEFAULT_BARRISTER),
-                List.of(DEFAULT_BARRISTER), AUTH_TOKEN));
+                Collections.emptyList(), AUTH_TOKEN));
 
         String expectedMessage = "Could not find the user with email " + APP_BARRISTER_EMAIL_ONE;
         String actual = exception.getMessage();
@@ -275,33 +291,6 @@ public class ManageBarristerServiceTest {
                 .organisation(Organisation.builder().organisationID(SOME_ORG_ID).build())
                 .build()))
             .build();
-    }
-
-    private RepresentationUpdateHistory buildRepresentationUpdateHistory() {
-        return RepresentationUpdateHistory.builder()
-            .representationUpdateHistory(List.of(element(UUID.randomUUID(),
-                RepresentationUpdate.builder()
-                    .added(ChangedRepresentative.builder()
-                        .email(APP_BARRISTER_EMAIL_ONE)
-                        .build())
-                    .by(APP_SOLICITOR)
-                    .via(MANAGE_BARRISTERS)
-                    .party(APPLICANT)
-                    .clientName("The Applicant")
-                    .build()
-            )))
-            .build();
-    }
-
-    private void assertChangeOfRepresentationRequest(ChangeOfRepresentationRequest request,
-                                                     String email,
-                                                     String by,
-                                                     String party,
-                                                     String client) {
-        assertThat(request.getAddedRepresentative().getEmail(), is(email));
-        assertThat(request.getBy(), is(by));
-        assertThat(request.getParty(), is(party));
-        assertThat(request.getClientName(), is(client));
     }
 
     private CaseAssignedUserRolesResource buildCaseAssignedUserRolesResource(String role) {
